--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,6 @@
-<h1><%= @article.title %></h1>
+<h1 align="center"><%= @article.title %></h1>
+
+<p align="center"><iframe src=<%="/pico8_games/" + @article.pico_path + "/index.html"%> id="pico_iframe" width="700" height="650"></iframe></p>
 
 <p><%= @article.body %></p>
 
@@ -14,4 +16,4 @@
 <%= render @article.comments %>
 
 <h2>Add a comment:</h2>
-<%= render 'comments/form' %>[20]
+<%= render 'comments/form' %>
