no concepts in new form

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,10 @@
 <h1>Edit Article</h1>
 
 <%= render "form", article: @article %>
+
+<hr>
+<h2>Add a concept:</h2>
+<%= render 'concepts/form' %>
+<hr>
+
+<%= render "list_concepts", article: @article, show_delete: true %>
