changed file name

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Milo's Epic Articles!</h1>
+<h1>Milo's Epic Portfolio!</h1>
 
 <!-- Our blog has <%= Article.public_count %> articles and counting! -->
 
