--- a/app/views/concepts/_concept.html.erb
+++ b/app/views/concepts/_concept.html.erb
@@ -15,19 +15,22 @@
         <% end %>
       </div>
     </div>
-    <div class="concept_extra concept_row">
-      <div class="concept_id"></div>
-      <div class="concept_name"><%=concept.why%></div>
-      <div class="concept_spacer"></div>
-      <div class="concept_cluster"></div>
-      <div class="concept_stars">
-        <% if show_delete %>
-          <%= link_to "Delete", [concept.article, concept], data: {
-                        turbo_method: :delete,
-                        turbo_confirm: "Delete comment?"
-                      } %>
-        <% end %>
-      </div>
+    <% if concept.why != ""  or show_delete %>
+      <div class="concept_extra concept_row">
+        <div class="concept_id"></div>
+        <div class="concept_id"></div>
+        <div class="concept_name"><%=concept.why%></div>
+        <div class="concept_spacer"></div>
+        <div class="concept_cluster"></div>
+        <div class="concept_stars">
+          <% if show_delete %>
+            <%= link_to "Delete", [concept.article, concept], data: {
+                          turbo_method: :delete,
+                          turbo_confirm: "Delete comment?"
+                        } %>
+          <% end %>
+        </div>
+      <% end %>
     </div>
   </div>
 <% end %>
