--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
   <p align="center"><iframe src=<%="/pico8_games/" + @article.pico_path + "/index.html"%> id="pico_iframe" width="700" height="650"></iframe></p>
 <% end %>
 
-<p><%= @article.body %></p>
+<p class="description"><%= @article.body %></p>
 
 <ul>
   <li><%= link_to "Edit", edit_article_path(@article) %></li>
