--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,16 @@
 <h1>Milo's Epic Portfolio!</h1>
+<% content_for :title, "Milo's Portfolio" %>
+<% content_for :page_class, "index_page" %>
 
 <!-- Our blog has <%= Article.public_count %> articles and counting! -->
 
-<ul>
+<ul class="article_grid">
   <% @articles.each do |article| %>
     <% unless article.archived? %>
       <li>
+        <div class="cover_image">
+          <%= link_to(image_tag("/images/default_cover.png"), article) %>
+        </div>
         <%= link_to article.title, article %>
       </li>
     <% end %>
