--- a/app/views/concepts/_concept.html.erb
+++ b/app/views/concepts/_concept.html.erb
@@ -2,10 +2,10 @@
   <div class="concept">
     <div class="concept_info concept_row">
       <div class="concept_id"><%=concept.concept_id%></div>
-      <div class="concept_name"><%=concept.get_concept_name?%></div>
+      <div class="concept_name"><%=concept.gci.name%></div>
       <div class="concept_spacer"></div>
-      <div class="concept_cluster"><%=concept.get_concept_cluster?%></div>
-      <div class="concept_stars">
+      <div class="concept_cluster <%="cluster_" + concept.gci.subject_id.to_s%>"><%=concept.gci.cluster_name%></div>
+      <div class="concept_stars <%="cluster_" + concept.gci.subject_id.to_s%>">
         <% for i in 0..3 do %>
           <% if i < concept.stars %>
             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"></path></svg>
@@ -17,7 +17,6 @@
     </div>
     <% if concept.why != ""  or show_delete %>
       <div class="concept_extra concept_row">
-        <div class="concept_id"></div>
         <div class="concept_id"></div>
         <div class="concept_name"><%=concept.why%></div>
         <div class="concept_spacer"></div>
